# Knapsack-Problem

./: .gitignore  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  Object.cpp  Object.h  ProblemGenerator.cpp  ProblemGenerator.h  ProblemInstance.cpp  ProblemInstance.h  Result.cpp  Result.h  main.cpp
Solvers/: BacktrackingSolver.cpp  BacktrackingSolver.h  BacktrackingSolver_presorted_by_weight_desc.cpp  BacktrackingSolver_presorted_by_weight_desc.h  BranchAndBoundSolver.cpp  BranchAndBoundSolver.h  BruteforceIterativeSolver.cpp  BruteforceIterativeSolver.h  BruteforceRecursiveSolver.cpp  BruteforceRecursiveSolver.h  BruteforceSolver.cpp  BruteforceSolver.h  DynamicSolver.cpp  DynamicSolver.h  GreedySolver.cpp  GreedySolver.h
